Get toast message from AsyncTask

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">AsyncTask OnClick</string>
+
+    <string name="btn_call_async_text">Call async task</string>
 </resources>
